--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta property="og:image" content="RPGAPI_Logo.png">
+        <meta property="og:title" content="RandPassJS">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="http://127.0.0.1:3000/RPGAPI_Logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="RPGAPI_Logo.png" type="image/x-icon">
         <title>RandPassJS</title>
     </head>
     <body>
